删除调试模式提示，无敌模式下不显示最终时间

--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
             </div>
             
             <div class="controls">
-                使用方向键或WASD移动飞机<br>
-                按 0 开启/关闭调试模式
+                使用方向键或WASD移动飞机
             </div>
         </div>
     </div>
